[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abulafia"
version = "0.2.1"
description = "A tool for fair and reproducible crowdsourcing using Toloka"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Tuomo Hiippala"},
    {name = "Helmiina Hotti"},
    {name = "Rosa Suviranta"}
]
dependencies = [
    "crowd_kit>=1.2.1",
    "pytest",
    "PyYAML==6.0",
    "shapely==2.0.1",
    "toloka_kit[pandas]>=1.0.0",
    "wasabi==1.1.1"
]
